[package]
name = "revsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
clap = "2.33.3"
env_logger = "0.9.0"
libc = "0.2.101"
log = "0.4.17"
tokio = { version = "1.7.0", features = ["full"] }
tokio-fd = "0.3.0"
tokio-native-tls = "0.3.0"

[features]
default = ["tty"]
tty = []
